smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-invalid-namespace.smithy
// Invalid use statement namespace: _$#Bar
$version: "0.1.0"

use shape _$#Bar
